--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 </head>
 <body>
   <div id="wrap" role="main" aria-label="Interactive gift with 3D cat">
+     <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
     <div class="ui">
       <header>Here's something special — tap the gift 🎁</header>
       <div class="sub">Tap near the kitty to make it jump & meow. The kitty will "say" each line — tap the gift to play the chase. Mobile-first design.</div>
@@ -347,4 +349,5 @@
   </script>
 </body>
 </html>
+
 
