--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
     import { GLTFLoader } from 'https://unpkg.com/three@0.152.2/examples/jsm/loaders/GLTFLoader.js';
     import { DRACOLoader } from 'https://unpkg.com/three@0.152.2/examples/jsm/loaders/DRACOLoader.js';
 
-    // ---------- USER: replace this with your GitHub-Pages URL after upload ----------
-    const CAT_MODEL_URL = 'const CAT_MODEL_URL = 'https://raw.githubusercontent.com/nomana001/arhaan_birthday/main/cute_spooky_cat.glb';
-';
+   // ---------- USER: replace this with your GitHub-Pages URL after upload ----------
+const CAT_MODEL_URL = 'https://raw.githubusercontent.com/nomana001/arhaan_birthday/main/cute_spooky_cat.glb';
+// ------------------------------------------------------------------------------
+
     // ------------------------------------------------------------------------------
 
     const MEOW_URL = 'https://cdn.pixabay.com/download/audio/2021/08/08/audio_7e3a3d6e17.mp3?filename=cartoon-meow-57110.mp3';
@@ -351,6 +352,7 @@
   </script>
 </body>
 </html>
+
 
 
 
