--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ const CAT_MODEL_URL = 'https://raw.githubusercontent.com/nomana001/arhaan_birthd
 
     let catModel = null, mixer = null, actions = {}, clock = new THREE.Clock();
 
-   loader.load(CAT_MODEL_URL, function (gltf) {
+   loader.load('https://raw.githubusercontent.com/nomana001/arhaan_birthday/main/cute_spooky_cat.glb', function (gltf) {
+
 
       const model = gltf.scene || gltf.scenes[0];
       model.traverse(node => { if(node.isMesh){ node.castShadow=true; node.receiveShadow=true; }});
@@ -352,6 +353,7 @@ const CAT_MODEL_URL = 'https://raw.githubusercontent.com/nomana001/arhaan_birthd
   </script>
 </body>
 </html>
+
 
 
 
