--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ const CAT_MODEL_URL = 'https://raw.githubusercontent.com/nomana001/arhaan_birthd
       const wrap = document.getElementById('wrap');
       const a = document.createElement('a');
       a.className = 'go-btn';
-      a.href = 'index.html';
+      a.href = 'birthday.html';
       a.innerText = 'Go to your surprise ✨';
       a.style.position = 'absolute';
       // place under bubble
@@ -353,6 +353,7 @@ const CAT_MODEL_URL = 'https://raw.githubusercontent.com/nomana001/arhaan_birthd
   </script>
 </body>
 </html>
+
 
 
 
