--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     // =================================================
 
     // --- CONFIGURATION ---
-    const CAT_MODEL_URL = 'cute_spooky_cat.glb'; 
+    const CAT_MODEL_URL = 'https://github.com/nomana001/arhaan_birthday/blob/main/cute_spooky_cat.glb'; 
     const MEOW_SOUND_URL = 'meow.mp3'; 
     
     // 🌟 UPDATED GIFT COLOR: Vibrant Red 🌟
@@ -555,4 +555,5 @@
 
 </script>
 </body>
+
 </html>
