--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     // --- CONFIGURATION ---
     const CAT_MODEL_URL = 'https://github.com/nomana001/arhaan_birthday/blob/main/cute_spooky_cat.glb'; 
-    const MEOW_SOUND_URL = 'meow.mp3'; 
+    const MEOW_SOUND_URL = 'https://github.com/nomana001/arhaan_birthday/blob/main/mixkit-sweet-kitty-meow-93.wav'; 
     
     // 🌟 UPDATED GIFT COLOR: Vibrant Red 🌟
     const GIFT_COLOR = 0xC91D34; // Vibrant Red 
@@ -557,3 +557,4 @@
 </body>
 
 </html>
+
