--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: 'Poppins', sans-serif;
             color: #E6E6E6; /* Light gray text on dark background */
             /* 🌟 Deep Black background 🌟 */
-            background-color: #0A0A0A; 
+            background-color: #FFB6C1; 
             overflow: hidden; 
             display: flex;
             justify-content: center;
@@ -557,4 +557,5 @@
 </body>
 
 </html>
+
 
