--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     // =================================================
 
     // --- CONFIGURATION ---
-    const CAT_MODEL_URL = 'cute_spooky_cat.glb'; 
+    const CAT_MODEL_URL = 'PLACEHOLDER_FOR_YOUR_CUTE_CAT.glb'; 
     const MEOW_SOUND_URL = 'meow.mp3'; 
     
     // 🌟 UPDATED GIFT COLOR: Vibrant Red 🌟
@@ -556,3 +556,4 @@
 </script>
 </body>
 </html>
+
